<resources>
    <string name="app_name">Wifi neOCampus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="connect_s">Connectés</string>
    <string name="connect_session">Historique récent</string>
    <string name="utilisateurs_actifs">Utilisateurs actifs</string>
    <string name="utilisateurs_sessions">Total utilisateurs</string>
    <string name="deux_points">:</string>
    <string name="wait_count">(?)</string>
    <string name="utilisations">Utilisations</string>
    <string name="total_transmission">Total transmission</string>
    <string name="wait_info">\?</string>
    <string name="taux_batterie_restant">Taux batterie restant</string>
    <string name="temps_d_utilisation_restant">Temps d\'utilisation restant</string>
    <string name="notification">Notification</string>
    <string name="limite_d_utilisations">Limite d\'utilisations</string>
    <string name="seuil_de_transmission">Seuil de transmission</string>
    <string name="seuil_de_la_batterie">Seuil de la batterie</string>
    <string name="seuil_de_temps">Seuil de temps</string>
    <string name="activation_en_cours">Activation en cours ...</string>
    <string name="activation_native_en_cours">⚠ Activation en cours ...</string>
    <string name="activer_le_partage">Lancer le Partage</string>
    <string name="activation_echec">"⚠ Echec : réessayer"</string>
    <string name="desactivation_en_cours">Désactivation en cours ...</string>
    <string name="desactivation_native_en_cours">⚠ Désactivation en cours ...</string>
    <string name="desactiver_le_partage">Arrêter le Partage</string>
    <string name="desactiver_native_partage">⚠ Arrêter le Partage</string>
    <string name="no_permission">"⚠ Permission"</string>
    <string name="adresse_physique">Adresse Physique</string>
    <string name="adresse_ip">Adresse IP</string>
    <string name="heure_debut">Heure début</string>
    <string name="heure_fin">Heure fin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="service_name">Service Wifi neOCampus</string>
    <string name="seuil_du_temps_de_partage">Seuil de la durée de partage</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="condition_batterie">⚠ Le seuil de la batterie doit être inférieur au niveau de la batterie</string>
    <string name="condition_temps">⚠ Le delai d\'utilisation doit être supérieur 0</string>
    <string name="condition_data">⚠ Le seuil de transmission doit être supérieur à (Total transmission)</string>
    <string name="condition_supported">Le partage wifi n\'est pas supporté</string>
    <string name="condition_shared">⚠ Arrêtez le partage en cours</string>
    <string name="condition_internet">"⚠ Internet mobile n'est pas accessible"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
