<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neocampus.wifishared.fragments.FragmentTime">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:text="@string/seuil_du_temps_de_partage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:typeface="serif"
                android:background="@drawable/cu_solid_bottom_border"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cu_solid_bottom_border">

                <Switch
                    android:text="@string/notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch1"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="16sp"
                    android:typeface="serif"
                    android:switchTextAppearance="@style/SwitchTextAppearance"
                    android:textColor="?android:attr/textColorTertiary"
                    android:thumb="@drawable/cu_switch_thumb_selector"
                    android:track="@drawable/cu_switch_track_bg"
                    android:showText="true"
                    android:textOff="@string/non"
                    android:textOn="@string/oui"
                    android:thumbTextPadding="10dp"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp">

            <com.neocampus.wifishared.views.ChronoTimeView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/timeView"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/cu_solid_bottom_border">


                    <TextView
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hours_left"
                        android:textSize="70sp"
                        android:textColor="@drawable/cu_time_selector"
                        android:typeface="monospace" />

                    <TextView
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hours_rigth"
                        android:textSize="70sp"
                        android:textColor="@drawable/cu_time_selector"
                        android:typeface="monospace" />

                    <TextView
                        android:text="H:"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="70sp"
                        android:typeface="serif" />

                    <TextView
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minute_left"
                        android:textSize="70sp"
                        android:textColor="@drawable/cu_time_selector"
                        android:typeface="monospace" />

                    <TextView
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/minute_right"
                        android:textSize="70sp"
                        android:textColor="@drawable/cu_time_selector"
                        android:typeface="monospace" />
                </LinearLayout>

                <com.neocampus.wifishared.views.KeyboardViews
                    android:id="@+id/keyboardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@android:color/transparent" />

            </com.neocampus.wifishared.views.ChronoTimeView>



        </FrameLayout>

    </LinearLayout>



</FrameLayout>
