<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neocampus.wifishared.fragments.FragmentSettings">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="Options générales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="serif"
                android:textColor="@color/colorTitleSetting"
                android:textSize="15sp"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cu_solid_bottom_border"
                android:onClick="onClickToDataConfig">

                <TextView
                    android:text="@string/seuil_de_transmission"
                    android:typeface="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:typeface="serif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/setting_data" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cu_solid_bottom_border"
                android:onClick="onClickToBatterieConfig">

                <TextView
                    android:text="@string/seuil_de_la_batterie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="serif"
                    android:layout_marginBottom="2dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="serif"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/setting_batterie" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cu_solid_bottom_border"
                android:onClick="onClickToTimeConfig">

                <TextView
                    android:text="@string/seuil_de_temps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="serif"
                    android:layout_marginBottom="2dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="serif"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/setting_time"
                    android:text="En maintenance" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cu_solid_bottom_border"
                android:layout_marginBottom="20dp"
                android:onClick="onClickToResetDataBase">

                <TextView
                    android:text="Effacer les traces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="serif"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="serif"
                    android:layout_marginBottom="10dp"
                    android:text="Réinitialiser les données" />

            </LinearLayout>

            <TextView
                android:text="Autres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="serif"
                android:textColor="@color/colorTitleSetting"
                android:textSize="15sp"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="10dp">

                <TextView
                    android:text="À propos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:typeface="serif"
                    android:layout_marginBottom="2dp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</FrameLayout>
